--- a/WebContent/style/style.css
+++ b/WebContent/style/style.css
@@ -65,7 +65,7 @@ p {
 .img {
     width: 50vw;
     height: 100vh;
-    background-image: url('main-bg.jpg');
+    background-image: url('../main-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
